cmake_minimum_required (VERSION 2.6)
project (vslam)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/bin)
find_package( OpenCV REQUIRED ) 
include_directories ("${PROJECT_SOURCE_DIR}/features2d")
include_directories ("${PROJECT_SOURCE_DIR}/matchlib")
add_subdirectory (features2d) 
add_subdirectory (matchlib) 
add_executable(feature_test test/feature_test.cpp)
add_executable(3d_test test/pointcloud_test.cpp)
add_executable(3d_ptest test/pointcloud_with_projection_test.cpp)
add_executable(depth_test test/depth_test.cpp)
target_link_libraries (feature_test features2d matchlib ${OpenCV_LIBS})
target_link_libraries (3d_test features2d matchlib ${OpenCV_LIBS})
target_link_libraries (3d_ptest features2d matchlib ${OpenCV_LIBS})
target_link_libraries (depth_test features2d matchlib ${OpenCV_LIBS})

